# gear-tracker-ml

./: LICENSE  README.md  dune-project  dune-workspace  gearTracker-ml.opam  test_data.ml  test_export.csv
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
_build/: .db  .digest-db  log
_build/_tests/: gearTracker-ml
_build/default/: META.gearTracker-ml  README.md  gearTracker-ml.dune-package  gearTracker-ml.install  gearTracker-ml.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/examples/: basic_usage.ml
_build/default/lib/: AttachmentRepo.ml  CheckoutService.ml  ConsumableRepo.ml  ImportExport.ml  LoadoutRepo.ml  checkout.ml  database.ml  gear.ml  gearTracker_ml.cma  gearTracker_ml.cmxa  gearTracker_ml.cmxs  gearTracker_ml__.ml-gen  loadout.ml
_build/default/test/: run_tests.ml
_build/macos/: META.gearTracker-ml  gearTracker-ml.dune-package  gearTracker-ml.install
_build/macos/.dune/: configurator
_build/static/: gearTracker-ml.install
_build/windows/: gearTracker-ml-windows.install
agentLogs/: GUI_MIGRATION_PLAN_2026-02-13.md  session_2026-02-13_gui_migration_planning.md  session_2026-02-13_import-export-implementation.md
examples/: dune
lib/: CheckoutRepo.ml  ConsumableRepo.ml  FirearmRepo.ml  GearRepo.ml  ImportExport.ml  LoadoutRepo.ml  LoadoutService.ml  MaintenanceService.ml  NFAItemRepo.ml  checkout.ml  dune  firearm.ml  gearTracker.ml  gearTracker_ml.ml  loadout.ml  reload.ml  vault.ml
scripts/: build_linux.sh  dune  init_db.ml
test/: dune  test_import_export.dune  test_import_export.ml
(+965 files in other folders)
